--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>新闻后台管理系统</title>
+    <!-- 引入第三方的css字体图标 -->
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1149845_q6g6u3g0jjk.css" />
   </head>
   <body>
     <noscript>
